test/scc/pp/errors/028.a
028.t:1:13: error: missing identifier in expression